--- a/Documenti/DiagrammiUML/Diagrams_it_IT.properties
+++ b/Documenti/DiagrammiUML/Diagrams_it_IT.properties
@@ -1,2 +1,2 @@
-#Tue Dec 02 11:28:35 CET 2025
-_label_DIAGRAMS__User__score=score\: int \= 0
+#Tue Dec 02 12:37:48 CET 2025
+_label_score=score\: int \= 0
