--- a/documenti/DiagrammiUML/Diagrams_it_IT.properties
+++ b/documenti/DiagrammiUML/Diagrams_it_IT.properties
@@ -1,2 +1,3 @@
-#Thu Jan 22 10:42:32 CET 2026
+#Thu Jan 22 12:10:48 CET 2026
+_label_currentRoom\ \=\ 0=currentRoom \= 0
 _label_score=score\: int \= 0
